--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -1,13 +1,14 @@
  *{
      margin: 0;
      text-transform: uppercase;
-     font-family: 'Orbitron', sans-serif;
+     font-family: 'Poppins', sans-serif;
+     scroll-behavior: smooth;
 
  }
 
 .Header {
     background-image:  url("../img/header.jpg");
-    height: 130vh;
+    height: 132vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -26,16 +27,19 @@
     float: right;
     color: white;
     margin: 11%;
-    font-size: 4vh;
-    /* right: 20%; */
     margin-left: 50%;
+    text-shadow: 4px 4px rgb(14, 12, 12);
+
     h1{
         letter-spacing: 4px;
+    font-size: 10vh;
     }
     h1 span{
         color: rgba(24, 35, 129, 0.87);
-        font-size: 9vh;
-    }
+            }
+            h2{
+                font-size: 4vh;
+            }
 
 }
 
@@ -65,3 +69,130 @@
     width: 100%;
     height: 100%;
 }
+
+
+a{
+    text-decoration: none;
+    color: white;
+    
+    transition: color 0.3s ease;
+  }
+  
+  a:hover
+  {
+    color: black;
+  }
+  nav {
+    overflow: visible;
+    background-color: transparent;
+    transition: background-color 1s ease 0s;
+    position: fixed;
+    top: 78px;
+    width: 169%;
+    z-index: 1;
+}
+  
+  #burger input
+  {
+    display: block;
+    width: 40px;
+    height: 27px;
+    position: absolute;
+    top: -2px;
+    left: 35px;
+    
+    cursor: pointer;
+    
+    opacity: 0;
+    z-index: 2;
+    
+    -webkit-touch-callout: none;
+  }
+  // Styling of the nav menu
+  #burger span
+  {
+    display: block;
+    width: 33px;
+    height: 4px;
+    margin-bottom: 5px;
+    position: relative;
+    text-decoration: none;
+    background: grey;
+    border-radius: 3px;
+    
+    z-index: 1;
+    
+    transform-origin: 4px 0px;
+    
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+                opacity 0.55s ease;
+                left: 40px;
+  }
+  
+  #burger span:first-child
+  {
+    transform-origin: 0% 0%;
+  }
+  
+  #burger span:nth-last-child(2)
+  {
+    transform-origin: 0% 100%;
+  }
+  
+  #burger input:checked ~ span
+  {
+    opacity: 1;
+    transform: rotate(45deg) translate(-2px, -1px);
+    background: #232323;
+    left:35px;
+    text-decoration: none;
+  }
+  
+  #burger input:checked ~ span:nth-last-child(3)
+  {
+    opacity: 0;
+    transform: rotate(0deg) scale(0.2, 0.2);
+  }
+  
+  #burger input:checked ~ span:nth-last-child(2)
+  {
+    transform: rotate(-45deg) translate(0, -1px);
+  }
+  // styling the size of the menu
+  #menu
+  {
+    position: absolute;
+    width: 262px;
+    margin: -100px 0 0 -50px;
+    padding: 50px;
+    text-decoration: none;
+    padding-top: 125px;
+    color: white;
+    background:rgba(0, 0, 0, 0.7);
+    list-style-type: none;
+    -webkit-font-smoothing: antialiased;
+    /* to stop flickering of text in safari */
+    
+    transform-origin: 0% 0%;
+    transform: translate(-100%, 0);
+    
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+  }
+  
+  #menu li
+  {
+    padding: 10px 52px;
+    font-size: 22px;
+    text-shadow: 2px 2px rgb(14, 12, 12);
+    text-decoration: none;
+    color: white;
+  }
+  
+  /*
+   * And let's slide it in from the left
+   */
+  #burger input:checked ~ ul
+  {
+    transform: none;
+  }
