added progress bar to skills section

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,6 @@
 * {
   margin: 0;
   text-transform: uppercase;
-  font-family: 'Poppins', sans-serif;
   scroll-behavior: smooth; }
 
 .Header {
@@ -25,7 +24,8 @@
   color: white;
   margin: 11%;
   margin-left: 50%;
-  text-shadow: 4px 4px #0e0c0c; }
+  text-shadow: 4px 4px #0e0c0c;
+  font-family: 'Poppins', sans-serif; }
   .header-text h1 {
     letter-spacing: 4px;
     font-size: 10vh; }
@@ -43,22 +43,6 @@
   left: 19%;
   right: 18%;
   color: white; }
-
-.container1 {
-  background-image: url("../img/con1.jpg");
-  height: 130vh;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-  background-attachment: fixed; }
-
-.con1 {
-  background-color: rgba(0, 0, 0, 0.5);
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%; }
 
 a {
   text-decoration: none;
@@ -151,5 +135,54 @@ nav {
  */
 #burger input:checked ~ ul {
   transform: none; }
+
+.container1 {
+  background-image: url("../img/con1.jpg");
+  height: 157vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  background-attachment: fixed; }
+  .container1 .con1 {
+    background-color: rgba(0, 0, 0, 0.5);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; }
+    .container1 .con1 h1 {
+      color: white;
+      text-align: center;
+      font-size: 6vh;
+      padding-top: 19%; }
+    .container1 .con1 h4 {
+      color: white; }
+  .container1 .skill {
+    display: grid;
+    margin: 9%;
+    left: 10;
+    padding-left: 13%; }
+  .container1 .skill-bar {
+    width: 100%;
+    max-width: 80%;
+    height: 26px;
+    height: 1.2em;
+    background: #e6eae3;
+    background: #0866dc;
+    background: rgba(141, 185, 240, 0.2);
+    overflow: hidden;
+    border-radius: 5px; }
+  .container1 .skillbar {
+    height: 1.66em;
+    float: left;
+    background: rgba(0, 0, 0, 0.74); }
+  .container1 .value-90 {
+    width: 90%; }
+  .container1 .value-70 {
+    width: 70%; }
+  .container1 .value-80 {
+    width: 80%; }
+  .container1 .value-40 {
+    width: 40%; }
 
 /*# sourceMappingURL=styles.css.map */
