made a new section

--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -185,7 +185,7 @@ a{
 
   .container1 {
     background-image:  url("../img/con1.jpg");
-    height: 157vh;
+    height: 161vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -249,3 +249,8 @@ a{
   .value-70  { width: 70%;  };
   .value-80  { width: 80%;  };
   .value-40  { width: 40%;  }
+
+  .container2{
+    background-color: #21373B;
+    height: 45vh;
+  }
