--- a/css/styles.css
+++ b/css/styles.css
@@ -138,7 +138,7 @@ nav {
 
 .container1 {
   background-image: url("../img/con1.jpg");
-  height: 157vh;
+  height: 161vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -199,5 +199,9 @@ nav {
 
 .value-40 {
   width: 40%; }
+
+.container2 {
+  background-color: #21373B;
+  height: 45vh; }
 
 /*# sourceMappingURL=styles.css.map */
