--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
 
 .Header {
   background-image: url("../img/header.jpg");
-  height: 132vh;
+  height: 134vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -201,7 +201,22 @@ nav {
   width: 40%; }
 
 .container2 {
-  background-color: #21373B;
-  height: 45vh; }
+  background-image: url("../img/con3.jpg");
+  height: 161vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative; }
+  .container2 .con2 {
+    background-color: rgba(0, 0, 0, 0.7);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; }
+  .container2 h1 {
+    color: white;
+    text-align: center;
+    padding-top: 3%;
+    font-size: 6vh; }
 
 /*# sourceMappingURL=styles.css.map */
