--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -8,7 +8,7 @@
 
 .Header {
     background-image:  url("../img/header.jpg");
-    height: 132vh;
+    height: 134vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -251,6 +251,24 @@ a{
   .value-40  { width: 40%;  }
 
   .container2{
-    background-color: #21373B;
-    height: 45vh;
+    background-image:  url("../img/con3.jpg");
+    height: 161vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+
+    .con2{
+        background-color: rgba(0, 0, 0, 0.7);
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+    h1{
+        color: white;
+        text-align: center;
+        padding-top: 3%;
+        font-size: 6vh;
+    }
   }
