--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -271,4 +271,16 @@ a{
         padding-top: 3%;
         font-size: 6vh;
     }
+    .con2-grid{
+        display: grid;
+        grid-gap: -20%;
+        grid-template-columns: auto auto auto;
+        padding-right: 6%;
+    }
+    img{
+        width: 97%;
+        margin: 10%;
+    }
+
+
   }
