--- a/css/styles.css
+++ b/css/styles.css
@@ -227,4 +227,293 @@ nav {
     width: 97%;
     margin: 10%; }
 
+/* 
+  ##Device = Desktops
+  ##Screen = 1281px to higher resolution desktops
+*/
+@media (min-width: 1281px) {
+  .header-text {
+    float: right;
+    color: white;
+    margin: 11%;
+    margin-left: 50%;
+    text-shadow: 4px 4px #0e0c0c;
+    font-family: 'Poppins', sans-serif; } }
+/* 
+  ##Device = Laptops, Desktops
+  ##Screen = B/w 1025px to 1280px
+*/
+@media (min-width: 1025px) and (max-width: 1280px) {
+  .header-text {
+    float: right;
+    color: white;
+    margin: 11%;
+    margin-left: 50%;
+    text-shadow: 4px 4px #0e0c0c;
+    font-family: 'Poppins', sans-serif; } }
+/* 
+  ##Device = Tablets, Ipads (portrait)
+  ##Screen = B/w 768px to 1024px
+*/
+@media (min-width: 768px) and (max-width: 1024px) {
+  .Header {
+    background-image: url("../img/header.jpg");
+    height: 134vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    background-attachment: fixed; }
+
+  .hero-image {
+    background-color: rgba(0, 0, 0, 0.5);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; }
+
+  .header-text {
+    float: right;
+    color: white;
+    margin: 11%;
+    margin-left: 50%;
+    text-shadow: 4px 4px #0e0c0c;
+    font-family: 'Poppins', sans-serif; }
+    .header-text h1 {
+      letter-spacing: 4px;
+      font-size: 10vh; }
+    .header-text h1 span {
+      color: rgba(24, 35, 129, 0.87); }
+    .header-text h2 {
+      font-size: 4vh; }
+
+  .header-text2 {
+    background: rgba(0, 0, 0, 0.7);
+    padding: 50px;
+    position: absolute;
+    margin: 0px;
+    bottom: 0px;
+    left: 19%;
+    right: 18%;
+    color: white; }
+
+  a {
+    text-decoration: none;
+    color: white;
+    transition: color 0.3s ease; }
+
+  a:hover {
+    color: black; } }
+/* 
+  ##Device = Tablets, Ipads (landscape)
+  ##Screen = B/w 768px to 1024px
+*/
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+  .Header {
+    background-image: url("../img/header.jpg");
+    height: 134vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    background-attachment: fixed; }
+
+  .hero-image {
+    background-color: rgba(0, 0, 0, 0.5);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; }
+
+  .header-text {
+    float: right;
+    color: white;
+    margin: 11%;
+    margin-left: 50%;
+    text-shadow: 4px 4px #0e0c0c;
+    font-family: 'Poppins', sans-serif; }
+    .header-text h1 {
+      letter-spacing: 4px;
+      font-size: 10vh; }
+    .header-text h1 span {
+      color: rgba(24, 35, 129, 0.87); }
+    .header-text h2 {
+      font-size: 4vh; }
+
+  .header-text2 {
+    background: rgba(0, 0, 0, 0.7);
+    padding: 50px;
+    position: absolute;
+    margin: 0px;
+    bottom: 0px;
+    left: 19%;
+    right: 18%;
+    color: white; }
+
+  a {
+    text-decoration: none;
+    color: white;
+    transition: color 0.3s ease; }
+
+  a:hover {
+    color: black; } }
+/* 
+  ##Device = Low Resolution Tablets, Mobiles (Landscape)
+  ##Screen = B/w 481px to 767px
+*/
+@media (min-width: 481px) and (max-width: 767px) {
+  .Header {
+    background-image: url("../img/header.jpg");
+    height: 196vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    background-attachment: fixed; }
+
+  .hero-image {
+    background-color: rgba(0, 0, 0, 0.5);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; }
+
+  .header-text {
+    float: right;
+    color: white;
+    margin-top: 42%;
+    /* margin: 11%; */
+    /* margin-left: 50%; */
+    text-shadow: 4px 4px #0e0c0c;
+    font-family: 'Poppins', sans-serif; }
+    .header-text h1 {
+      letter-spacing: 4px;
+      font-size: 8vh; }
+    .header-text h1 span {
+      color: rgba(24, 35, 129, 0.87); }
+    .header-text h2 {
+      font-size: 4vh; }
+
+  .header-text2 {
+    background: rgba(0, 0, 0, 0.7);
+    /* padding: 50px; */
+    position: absolute;
+    /* margin: 0px; */
+    bottom: 0px;
+    top: 73%;
+    left: 3%;
+    right: 4%;
+    color: white; }
+
+  a {
+    text-decoration: none;
+    color: white;
+    transition: color 0.3s ease; }
+
+  a:hover {
+    color: black; } }
+/* 
+  ##Device = Most of the Smartphones Mobiles (Portrait)
+  ##Screen = B/w 320px to 479px
+*/
+@media (min-width: 320px) and (max-width: 480px) {
+  .Header {
+    background-image: url("../img/header.jpg");
+    height: 147vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    background-attachment: fixed; }
+
+  .hero-image {
+    background-color: rgba(0, 0, 0, 0.5);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; }
+
+  .header-text {
+    float: right;
+    color: white;
+    margin-top: 56%;
+    /* margin-left: 17%; */
+    text-shadow: 4px 4px #0e0c0c;
+    font-family: 'Poppins', sans-serif; }
+    .header-text h1 {
+      letter-spacing: 4px;
+      font-size: 7vh; }
+    .header-text h1 span {
+      color: rgba(24, 35, 129, 0.87); }
+    .header-text h2 {
+      font-size: 4vh; }
+
+  .header-text2 {
+    background: rgba(0, 0, 0, 0.7);
+    padding: 22px;
+    position: absolute;
+    margin: 0px;
+    top: 58%;
+    bottom: 0px;
+    left: 3%;
+    right: 4%;
+    color: white; }
+
+  a {
+    text-decoration: none;
+    color: white;
+    transition: color 0.3s ease; }
+
+  a:hover {
+    color: black; } }
+@media (min-width: 240px) and (max-width: 320px) {
+  .Header {
+    background-image: url("../img/header.jpg");
+    height: 134vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    background-attachment: fixed; }
+
+  .hero-image {
+    background-color: rgba(0, 0, 0, 0.5);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; }
+
+  .header-text {
+    float: right;
+    color: white;
+    margin: 11%;
+    margin-left: 50%;
+    text-shadow: 4px 4px #0e0c0c;
+    font-family: 'Poppins', sans-serif; }
+    .header-text h1 {
+      letter-spacing: 4px;
+      font-size: 10vh; }
+    .header-text h1 span {
+      color: rgba(24, 35, 129, 0.87); }
+    .header-text h2 {
+      font-size: 4vh; }
+
+  .header-text2 {
+    background: rgba(0, 0, 0, 0.7);
+    padding: 50px;
+    position: absolute;
+    margin: 0px;
+    bottom: 0px;
+    left: 19%;
+    right: 18%;
+    color: white; }
+
+  a {
+    text-decoration: none;
+    color: white;
+    transition: color 0.3s ease; }
+
+  a:hover {
+    color: black; } }
+
 /*# sourceMappingURL=styles.css.map */
