--- a/css/styles.css
+++ b/css/styles.css
@@ -411,7 +411,45 @@ nav {
     transition: color 0.3s ease; }
 
   a:hover {
-    color: black; } }
+    color: black; }
+
+  .container1 {
+    background-image: url("../img/con1.jpg");
+    height: 105vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    background-attachment: fixed; }
+
+  .container2 {
+    background-image: url("../img/con3.jpg");
+    height: 161vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative; }
+    .container2 .con2 {
+      background-color: rgba(0, 0, 0, 0.7);
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%; }
+    .container2 h1 {
+      color: white;
+      text-align: center;
+      padding-top: 3%;
+      font-size: 6vh; }
+    .container2 .con2-grid {
+      display: grid;
+      grid-gap: -20%;
+      grid-template-columns: auto auto;
+      padding-right: 6%; }
+    .container2 img {
+      width: 101%;
+      margin: 5%; }
+    .container2 .grid {
+      width: 200%; } }
 /* 
   ##Device = Most of the Smartphones Mobiles (Portrait)
   ##Screen = B/w 320px to 479px
@@ -465,7 +503,43 @@ nav {
     transition: color 0.3s ease; }
 
   a:hover {
-    color: black; } }
+    color: black; }
+
+  .container1 {
+    background-image: url("../img/con1.jpg");
+    height: 105vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    background-attachment: fixed; }
+
+  .container2 {
+    background-image: url("../img/con3.jpg");
+    height: 161vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative; }
+    .container2 .con2 {
+      background-color: rgba(0, 0, 0, 0.7);
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%; }
+    .container2 h1 {
+      color: white;
+      text-align: center;
+      padding-top: 3%;
+      font-size: 6vh; }
+    .container2 .con2-grid {
+      display: grid;
+      grid-gap: -20%;
+      grid-template-columns: auto;
+      padding-right: 6%; }
+    .container2 img {
+      width: 91%;
+      margin: 7%; } }
 @media (min-width: 240px) and (max-width: 320px) {
   .Header {
     background-image: url("../img/header.jpg");
