--- a/sass/partials/_responsiveness.scss
+++ b/sass/partials/_responsiveness.scss
@@ -243,6 +243,50 @@ a:hover
 {
   color: black;
 }
+.container1 {
+  background-image:  url("../img/con1.jpg");
+  height: 105vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  background-attachment: fixed;
+}
+.container2{
+  background-image:  url("../img/con3.jpg");
+  height: 161vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+
+  .con2{
+      background-color: rgba(0, 0, 0, 0.7);
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+  }
+  h1{
+      color: white;
+      text-align: center;
+      padding-top: 3%;
+      font-size: 6vh;
+  }
+  .con2-grid{
+      display: grid;
+      grid-gap: -20%;
+      grid-template-columns: auto auto ;
+      padding-right: 6%;
+  }
+  img{
+    width: 101%;
+    margin: 5%;
+  }
+  .grid{
+    width: 200%;
+  }
+}
 }
 
 
@@ -312,6 +356,51 @@ a{
 a:hover
 {
   color: black;
+}
+
+.container1 {
+  background-image:  url("../img/con1.jpg");
+  height: 105vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  background-attachment: fixed;
+}
+.container2{
+  background-image:  url("../img/con3.jpg");
+  height: 161vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+
+  .con2{
+      background-color: rgba(0, 0, 0, 0.7);
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+  }
+  h1{
+      color: white;
+      text-align: center;
+      padding-top: 3%;
+      font-size: 6vh;
+  }
+  .con2-grid{
+      display: grid;
+      grid-gap: -20%;
+      grid-template-columns: auto  ;
+      padding-right: 6%;
+  }
+  img{
+    width: 91%;
+    margin: 7%;
+  }
+  // .grid{
+  //   width: 200%;
+  // }
 }
 }
 
