--- a/css/styles.css
+++ b/css/styles.css
@@ -80,7 +80,7 @@ nav {
   margin-bottom: 5px;
   position: relative;
   text-decoration: none;
-  background: grey;
+  background: white;
   border-radius: 3px;
   z-index: 1;
   transform-origin: 4px 0px;
@@ -543,7 +543,7 @@ nav {
 @media (min-width: 240px) and (max-width: 320px) {
   .Header {
     background-image: url("../img/header.jpg");
-    height: 134vh;
+    height: 220vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -560,13 +560,13 @@ nav {
   .header-text {
     float: right;
     color: white;
-    margin: 11%;
-    margin-left: 50%;
+    /* margin: 4%; */
+    margin-left: 36%;
     text-shadow: 4px 4px #0e0c0c;
     font-family: 'Poppins', sans-serif; }
     .header-text h1 {
       letter-spacing: 4px;
-      font-size: 10vh; }
+      font-size: 7vh; }
     .header-text h1 span {
       color: rgba(24, 35, 129, 0.87); }
     .header-text h2 {
@@ -574,12 +574,13 @@ nav {
 
   .header-text2 {
     background: rgba(0, 0, 0, 0.7);
-    padding: 50px;
+    padding: 3px;
     position: absolute;
     margin: 0px;
     bottom: 0px;
-    left: 19%;
-    right: 18%;
+    top: 66%;
+    left: 5%;
+    right: 5%;
     color: white; }
 
   a {
