--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -102,7 +102,7 @@ a{
     margin-bottom: 5px;
     position: relative;
     text-decoration: none;
-    background: grey;
+    background: white;
     border-radius: 3px;
     
     z-index: 1;
