--- a/sass/partials/_responsiveness.scss
+++ b/sass/partials/_responsiveness.scss
@@ -410,7 +410,7 @@ a:hover
 
   .Header {
     background-image:  url("../img/header.jpg");
-    height: 134vh;
+    height: 220vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -427,14 +427,14 @@ a:hover
 .header-text{
   float: right;
   color: white;
-  margin: 11%;
-  margin-left: 50%;
-  text-shadow: 4px 4px rgb(14, 12, 12);
+  /* margin: 4%; */
+  margin-left: 36%;
+  text-shadow: 4px 4px #0e0c0c;
   font-family: 'Poppins', sans-serif;
 
   h1{
       letter-spacing: 4px;
-  font-size: 10vh;
+  font-size: 7vh;
   }
   h1 span{
       color: rgba(24, 35, 129, 0.87);
@@ -445,15 +445,16 @@ a:hover
 
 }
 
-.header-text2{
-  background:rgba(0, 0, 0, 0.7);
-  padding: 50px;
+.header-text2 {
+  background: rgba(0, 0, 0, 0.7);
+  padding: 3px;
   position: absolute;
   margin: 0px;
   bottom: 0px;
-  left: 19%;
-  right: 18%;
- color: white;
+  top: 66%;
+  left: 5%;
+  right: 5%;
+  color: white;
 }
 
 
