in container 3 created a time for my education

--- a/css/styles.css
+++ b/css/styles.css
@@ -202,7 +202,7 @@ nav {
 
 .container2 {
   background-image: url("../img/con3.jpg");
-  height: 161vh;
+  height: 189vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -226,6 +226,54 @@ nav {
   .container2 img {
     width: 97%;
     margin: 10%; }
+
+.container3 {
+  width: 80%;
+  padding: 50px 0;
+  margin: 50px auto;
+  position: relative;
+  overflow: hidden; }
+  .container3:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 50%;
+    margin-left: -1px;
+    width: 2px;
+    height: 100%;
+    background: #CCD1D9;
+    z-index: 1; }
+  .container3 .time {
+    width: -webkit-calc(50% + 8px);
+    width: -moz-calc(50% + 8px);
+    width: calc(50% + 8px);
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: flex;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+    -moz-box-pack: justify;
+    justify-content: space-between;
+    clear: both; }
+  .container3 .time-right {
+    float: right; }
+  .container3 .time-left {
+    float: left;
+    direction: rtl; }
+  .container3 .dot {
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    border: 2px solid #F5F7FA;
+    background: #4FC1E9;
+    margin-top: 10px;
+    z-index: 9999; }
+  .container3 .time-text {
+    width: 95%;
+    padding: 0px 18px;
+    margin-bottom: 94px;
+    color: #666; }
 
 /* 
   ##Device = Desktops
