about section i sized to be bigger and moved it into second section

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,16 +34,6 @@
   .header-text h2 {
     font-size: 4vh; }
 
-.header-text2 {
-  background: rgba(0, 0, 0, 0.7);
-  padding: 50px;
-  position: absolute;
-  margin: 0px;
-  bottom: 0px;
-  left: 19%;
-  right: 18%;
-  color: white; }
-
 a {
   text-decoration: none;
   color: white;
@@ -144,6 +134,33 @@ nav {
   background-size: cover;
   position: relative;
   background-attachment: fixed; }
+  .container1 .header-text {
+    background: rgba(0, 0, 0, 0.7);
+    padding: 50px;
+    display: grid;
+    margin: 0px;
+    bottom: 0px;
+    left: 19%;
+    right: 18%;
+    color: white; }
+    .container1 .header-text .text-grid {
+      grid-template-columns: auto auto;
+      display: inline-grid;
+      grid-gap: 22%;
+      padding-right: -1%;
+      padding: 6px; }
+      .container1 .header-text .text-grid img {
+        border-radius: 50%;
+        border: 6px solid white;
+        width: 38vh;
+        margin-left: 64%; }
+      .container1 .header-text .text-grid .text {
+        padding-right: 8%;
+        margin: 7px; }
+        .container1 .header-text .text-grid .text h1 {
+          font-size: 7vh; }
+        .container1 .header-text .text-grid .text p {
+          letter-spacing: 1px; }
   .container1 .con1 {
     background-color: rgba(0, 0, 0, 0.5);
     top: 0;
