made a hovering effect over project section images

--- a/css/styles.css
+++ b/css/styles.css
@@ -239,10 +239,59 @@ nav {
     display: grid;
     grid-gap: -20%;
     grid-template-columns: auto auto auto;
-    padding-right: 6%; }
+    padding-right: 4%; }
   .container2 img {
     width: 97%;
     margin: 10%; }
+  .container2 .hover-image {
+    position: relative;
+    max-width: 481px;
+    margin: auto;
+    overflow: hidden; }
+  .container2 .hover-image .hover-overlay {
+    background: rgba(0, 0, 0, 0.7);
+    position: absolute;
+    margin: 10%;
+    width: 100%;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    opacity: 0;
+    -webkit-transition: all 0.4s ease-in-out 0s;
+    -moz-transition: all 0.4s ease-in-out 0s;
+    transition: all 0.4s ease-in-out 0s; }
+  .container2 .hover-image:hover .hover-overlay {
+    opacity: 1; }
+  .container2 .hover-details {
+    position: absolute;
+    text-align: center;
+    padding-left: 4em;
+    /* padding-right: 1em; */
+    width: 100%;
+    top: 50%;
+    /* left: 50%; */
+    opacity: 0;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    -webkit-transition: all 0.3s ease-in-out 0s;
+    -moz-transition: all 0.3s ease-in-out 0s;
+    transition: all 0.3s ease-in-out 0s; }
+  .container2 .hover-image:hover .hover-details {
+    top: 50%;
+    left: 50%;
+    opacity: 1; }
+  .container2 .hover-details h3 {
+    color: #fff;
+    font-weight: 500;
+    letter-spacing: 0.15em;
+    margin-bottom: 0.5em;
+    text-transform: uppercase; }
+  .container2 .fadein-bottom {
+    top: 80%; }
+  .container2 .hover-image {
+    width: 100%; }
 
 .container3 {
   width: 80%;
