--- a/css/styles.css
+++ b/css/styles.css
@@ -128,7 +128,7 @@ nav {
 
 .container1 {
   background-image: url("../img/con1.jpg");
-  height: 161vh;
+  height: 148vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -178,44 +178,18 @@ nav {
       font-size: 3vh; }
     .container1 .con1 h4 {
       color: white; }
-
-.skill {
-  display: grid;
-  margin: 9%;
-  left: 10;
-  padding-left: 13%; }
-  .skill p {
-    color: white;
-    text-align: center;
-    font-size: 14px; }
-
-.skill-bar {
-  width: 100%;
-  max-width: 80%;
-  height: 26px;
-  height: 1.2em;
-  background: #e6eae3;
-  background: #0866dc;
-  background: rgba(141, 185, 240, 0.2);
-  overflow: hidden;
-  border-radius: 5px; }
-
-.skillbar {
-  height: 1.66em;
-  float: left;
-  background: rgba(0, 0, 0, 0.74); }
-
-.value-90 {
-  width: 90%; }
-
-.value-70 {
-  width: 70%; }
-
-.value-80 {
-  width: 80%; }
-
-.value-40 {
-  width: 40%; }
+  .container1 .skills-section {
+    display: grid; }
+    .container1 .skills-section .skills-sub {
+      display: inline;
+      grid-template-columns: auto auto auto;
+      margin: 12%; }
+      .container1 .skills-section .skills-sub img {
+        width: 22%;
+        border-radius: 50%;
+        border: 6px solid white;
+        padding: 34px;
+        margin-right: 28px; }
 
 .container2 {
   background-image: url("../img/con3.jpg");
