--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -546,3 +546,14 @@ a{
     transform: scale(1.7); 
   }
 }
+.copy{
+  background-color: #040A10;
+  height: 6vh;
+  h4{
+    text-align: center;
+    /* margin-top: 0px; */
+    color: white;
+    /* top: 10px; */
+    padding-top: 7px;
+  }
+}
