--- a/css/styles.css
+++ b/css/styles.css
@@ -85,7 +85,8 @@ nav {
   margin-bottom: 5px;
   position: relative;
   text-decoration: none;
-  background: #238bb1;
+  background: white;
+  text-shadow: 4px 4px #0e0c0c;
   border-radius: 3px;
   z-index: 1;
   transform-origin: 4px 0px;
@@ -166,7 +167,7 @@ nav {
       padding: 6px; }
       .container1 .header-text .text-grid img {
         border-radius: 50%;
-        border: 6px solid #238bb1;
+        border: 6px solid white;
         width: 38vh;
         margin-left: 64%; }
       .container1 .header-text .text-grid .text {
@@ -186,7 +187,8 @@ nav {
       color: white;
       text-align: center;
       font-size: 6vh;
-      padding-top: 19%; }
+      padding-top: 19%;
+      text-shadow: 4px 4px #0e0c0c; }
     .container1 .con1 h3 {
       color: white;
       text-align: center;
@@ -202,7 +204,7 @@ nav {
       .container1 .skills-section .skills-sub img {
         width: 22%;
         border-radius: 50%;
-        border: 6px solid #238bb1;
+        border: 6px solid white;
         padding: 34px;
         margin-right: 28px; }
 
@@ -423,7 +425,8 @@ nav {
     display: inline;
     visibility: visible;
     opacity: 1;
-    word-spacing: 30px; }
+    word-spacing: 30px;
+    text-shadow: 2px 2px #0e0c0c; }
   .footer img {
     display: inline;
     margin-left: 100%;
