--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -5,6 +5,9 @@
      scroll-behavior: smooth;
 
  }
+ html{
+   overflow-x: hidden;
+ }
 
 .Header {
     background-image:  url("../img/header.jpg");
@@ -22,9 +25,9 @@
         
     }
     .bounce {
-      -moz-animation: bounce 1s infinite;
-      -webkit-animation: bounce 1s infinite;
-      animation: bounce 1s infinite;
+      -moz-animation: bounce 2s infinite;
+      -webkit-animation: bounce 2s infinite;
+      animation: bounce 2s infinite;
     }
     @keyframes bounce {
       0%, 20%, 50%, 80%, 100% {
