--- a/css/styles.css
+++ b/css/styles.css
@@ -457,33 +457,52 @@ nav {
   ##Screen = 1281px to higher resolution desktops
 */
 @media (min-width: 1281px) {
+  html {
+    overflow-x: hidden; }
+
   .header-text {
     float: right;
     color: white;
     margin: 11%;
     margin-left: 50%;
     text-shadow: 4px 4px #0e0c0c;
-    font-family: 'Poppins', sans-serif; } }
+    font-family: 'Poppins', sans-serif; }
+
+  .container1 .skills-section .skills-sub {
+    display: inline-flex;
+    grid-template-columns: auto auto auto;
+    margin: 12%; } }
 /* 
   ##Device = Laptops, Desktops
   ##Screen = B/w 1025px to 1280px
 */
 @media (min-width: 1025px) and (max-width: 1280px) {
+  html {
+    overflow-x: hidden; }
+
   .header-text {
     float: right;
     color: white;
     margin: 11%;
     margin-left: 50%;
     text-shadow: 4px 4px #0e0c0c;
-    font-family: 'Poppins', sans-serif; } }
+    font-family: 'Poppins', sans-serif; }
+
+  .container1 .skills-section .skills-sub {
+    display: inline-flex;
+    grid-template-columns: auto auto auto;
+    margin: 12%; } }
 /* 
   ##Device = Tablets, Ipads (portrait)
   ##Screen = B/w 768px to 1024px
 */
 @media (min-width: 768px) and (max-width: 1024px) {
+  html {
+    overflow-x: hidden; }
+
   .Header {
     background-image: url("../img/header.jpg");
-    height: 134vh;
+    height: 114vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -512,6 +531,12 @@ nav {
     .header-text h2 {
       font-size: 4vh; }
 
+  .container1 .header-text .text-grid img {
+    border-radius: 50%;
+    border: 6px solid white;
+    width: 33vh;
+    margin-left: 46%; }
+
   .header-text2 {
     background: rgba(0, 0, 0, 0.7);
     padding: 50px;
@@ -534,9 +559,12 @@ nav {
   ##Screen = B/w 768px to 1024px
 */
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+  html {
+    overflow-x: hidden; }
+
   .Header {
     background-image: url("../img/header.jpg");
-    height: 134vh;
+    height: 114vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -587,9 +615,12 @@ nav {
   ##Screen = B/w 481px to 767px
 */
 @media (min-width: 481px) and (max-width: 767px) {
+  html {
+    overflow-x: hidden; }
+
   .Header {
     background-image: url("../img/header.jpg");
-    height: 196vh;
+    height: 122vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -606,7 +637,7 @@ nav {
   .header-text {
     float: right;
     color: white;
-    margin-top: 42%;
+    margin-top: 30%;
     /* margin: 11%; */
     /* margin-left: 50%; */
     text-shadow: 4px 4px #0e0c0c;
@@ -618,6 +649,19 @@ nav {
       color: rgba(24, 35, 129, 0.87); }
     .header-text h2 {
       font-size: 4vh; }
+
+  .container1 .header-text .text-grid {
+    grid-template-columns: auto auto;
+    display: inline-grid;
+    grid-gap: 0%;
+    margin-right: -12%;
+    padding: 5px; }
+
+  .container1 .header-text .text-grid img {
+    border-radius: 50%;
+    border: 6px solid white;
+    width: 33vh;
+    margin-left: -3%; }
 
   .header-text2 {
     background: rgba(0, 0, 0, 0.7);
@@ -680,9 +724,12 @@ nav {
   ##Screen = B/w 320px to 479px
 */
 @media (min-width: 320px) and (max-width: 480px) {
+  html {
+    overflow-x: hidden; }
+
   .Header {
     background-image: url("../img/header.jpg");
-    height: 147vh;
+    height: 112vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -699,7 +746,7 @@ nav {
   .header-text {
     float: right;
     color: white;
-    margin-top: 56%;
+    margin-top: 37%;
     /* margin-left: 17%; */
     text-shadow: 4px 4px #0e0c0c;
     font-family: 'Poppins', sans-serif; }
@@ -710,6 +757,19 @@ nav {
       color: rgba(24, 35, 129, 0.87); }
     .header-text h2 {
       font-size: 4vh; }
+
+  .Header .arrow {
+    left: 42%;
+    position: absolute;
+    width: 12vh;
+    bottom: 23%; }
+
+  .container1 .header-text .text-grid img {
+    display: none;
+    border-radius: 50%;
+    border: 6px solid white;
+    width: 38vh;
+    margin-left: 64%; }
 
   .header-text2 {
     background: rgba(0, 0, 0, 0.7);
@@ -832,12 +892,25 @@ nav {
     grid-gap: 2%;
     padding-right: -1%;
     padding: 0px; }
+    .container1 .header-text .text-grid h1 {
+      font-size: 6vh; }
     .container1 .header-text .text-grid img {
       display: none;
       border-radius: 50%;
       border: 6px solid white;
       width: 32vh;
       margin-left: 6%; }
+
+  .container1 {
+    background-image: url(../img/con1.jpg);
+    height: 201vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    background-attachment: fixed; }
+    .container1 .con1 h1 {
+      font-size: 5vh; }
 
   .container1 .header-text {
     background: rgba(0, 0, 0, 0.7);
@@ -856,6 +929,15 @@ nav {
     padding-left: -11px;
     /* left: 4px; */
     margin-right: -10%;
-    /* text-align: center; */ } }
+    /* text-align: center; */ }
+
+  .container1 .skills-section .skills-sub img {
+    width: 70%;
+    border-radius: 50%;
+    border: 6px solid white;
+    padding: 35px;
+    margin-bottom: 6%;
+    margin-right: 5%;
+    margin-left: 11%; } }
 
 /*# sourceMappingURL=styles.css.map */
