--- a/sass/partials/_responsiveness.scss
+++ b/sass/partials/_responsiveness.scss
@@ -122,6 +122,11 @@ a:hover
 {
   color: black;
 }
+.container1 .skills-section .skills-sub {
+  display: inline-flex;
+  grid-template-columns: auto auto auto;
+  margin: 12%;
+}
 }
 
 
@@ -195,6 +200,11 @@ a{
 a:hover
 {
   color: black;
+}
+.container1 .skills-section .skills-sub {
+  display: inline-flex;
+  grid-template-columns: auto auto auto;
+  margin: 12%;
 }
 }
 
@@ -284,12 +294,20 @@ a:hover
 }
 .container1 {
   background-image:  url("../img/con1.jpg");
-  height: 105vh;
+  height: 141vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
   background-attachment: fixed;
+  .con1 h1 {
+    color: white;
+    margin-left: 45px;
+    text-align: center;
+    font-size: 5vh;
+    padding-top: 19%;
+    text-shadow: 4px 4px #0e0c0c;
+}
 }
 .container2{
   background-image:  url("../img/con3.jpg");
@@ -325,6 +343,21 @@ a:hover
   .grid{
     width: 200%;
   }
+}
+.container1 .skills-section .skills-sub {
+  display: grid;
+  grid-template-columns: auto auto;
+  /* margin: 5%; */
+  margin-top: 9px;
+  margin-left: 196px;
+  grid-gap: 16px;
+}
+.container1 .skills-section .skills-sub img {
+  width: 75%;
+  border-radius: 50%;
+  border: 6px solid white;
+  padding: 14px;
+  margin-right: 28px;
 }
 }
 
@@ -414,12 +447,34 @@ a:hover
 
 .container1 {
   background-image:  url("../img/con1.jpg");
-  height: 105vh;
+  height: 152vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
   background-attachment: fixed;
+}
+.container1 .skills-section .skills-sub {
+  display: grid;
+  grid-template-columns: auto auto;
+  /* margin: 5%; */
+  margin-top: 9px;
+  margin-left: 52px;
+  grid-gap: 16px;
+}
+.container1 .skills-section .skills-sub img {
+  width: 75%;
+  border-radius: 50%;
+  border: 6px solid white;
+  padding: 14px;
+  margin-right: 28px;
+}
+.container1 .con1 h1 {
+  color: white;
+  text-align: center;
+  font-size: 5vh;
+  padding-top: 19%;
+  text-shadow: 4px 4px #0e0c0c;
 }
 .container2{
   background-image:  url("../img/con3.jpg");
